fix path references in hello world examples

--- a/examples/hello_world/gisture.yml
+++ b/examples/hello_world/gisture.yml
@@ -1,4 +1,4 @@
-path: examples/simple.rb
+path: examples/hello_world/simple.rb
 strategy: eval
 evaluator: "Gisture::Evaluator"
 executor: ['ruby', '-v']
